# hs-opt-handbook.github.io

./: .buildinfo  .gitignore  .gitmodules  .ignore  404.html  Contributing.html  Contributing.rst  Makefile  README.html  README.md  README.rst  book.toml  chapter_1.html  conf.py  contents.html  contents.rst  contributing.html  custom.rst  flake.nix  genindex.html  hoh.nix  index.html  index.rst  objects.inv  print.html  release.nix  search.html  searchindex.js  searchindex.json  shell.nix  sphinx-book-theme.nix  style-guide.html  style-guide.md  style-guide.rst
.direnv/: nix-profile-.337635.cbd40c72b26  nix-profile-.337635.cbd40c72b26.rc
.github/workflows/: deploy.yml
Checklists/: CaseStudies.html  Part1.html  Part1.md  Part1.rst  Part2.html  README.html
Contributing/: CaseStudies.html  Editing.html  Editing.rst  Measurement_Observation.html  Optimizations.html  Optimizations.rst  Part1.html  Part1.rst  Part2.html  Part2.rst  README.html  README.rst
_sources/: Contributing.rst.txt  README.rst.txt  contents.rst.txt  index.rst.txt  style-guide.rst.txt
_sources/Contributing/: Editing.rst.txt  Measurement_Observation.rst.txt  Optimizations.rst.txt  Part1.rst.txt  Part2.rst.txt  README.rst.txt
_sources/src/: contributors.rst.txt  glossary.rst.txt  todos.rst.txt
_static/: basic.css  cabal.project
_static/css/: admonitions.css  iframe.css  s4defs-roles.css
_static/eventlog/: pc_heap_marker_empty.html  pc_heap_marker_final.html  pc_heap_marker_first.html  pc_heap_marker_high_sample.html  pc_heap_marker_s_ln.html  pc_heap_marker_still_leaky.html  pc_heap_marker_strict_ln.html  pc_heap_marker_strict_s_ln.html  pc_heap_type.html
_static/klister/: klister-eventlog-implicit-conversion-allscope-fixed.html  klister-eventlog-implicit-conversion-currentEnv-fixed.html  klister-eventlog-implicit-conversion-hb.html  klister-eventlog-implicit-conversion-hm.html  klister-eventlog-implicit-conversion-hy.html  klister-eventlog-implicit-conversion-ipe-allscopeset.html  klister-eventlog-implicit-conversion-ipe-allscopeset_forced_hy.html  klister-eventlog-implicit-conversion-ipe-allscopeset_stateT.html  klister-eventlog-implicit-conversion-strict-value.html
_static/lethargy/: CHANGELOG.md  LICENSE  lethargy.cabal  lethargy.nix
bib/: book.bib
code/: cabal.project  flake.nix  shell.nix
code/lethargy/: flake.nix  lethargy.cabal  lethargy.nix
code/lethargy/app/: Main.hs
code/lethargy/bench/: Fusion.hs  Inlining.hs  PointerChasing.hs
code/lethargy/bench/MemoryFootprints/: Main.dump-asm
code/lethargy/bench/PointerChasing/: Main.hs
code/lethargy/bench/TooManyClosures/: Main.hs
code/lethargy/bench/Weigh/: Main.hs
docs/: proposal.md
extensions/: conceptual_admonitions.py  sphinx_exec_directive.py
extensions/sphinx-exec-haskell/: README.rst  flake.nix  pyproject.toml  sphinx-exec-haskell.nix
extensions/sphinx-exec-haskell/src/: sphinx_exec_haskell.py
nix/: hoh.nix
scripts/: autobuild.sh  sphinx-autobuild-wrapped.sh
src/: SUMMARY.rst  chapter_1.md  chapter_1.rst  contributors.html  contributors.rst  glossary.html  glossary.rst  todos.html
src/Case_Studies/: cardano-regression.rst  data_oriented_design.html  data_oriented_design.rst  index.html  index.rst  klister.html  klister.rst  sbv_572.html  sbv_642.html  sbv_642.rst
src/Measurement_Observation/: haskell_model.rst  index.html  index.rst  the_recipe.html  the_recipe.rst
src/Optimizations/: index.html  index.rst
src/Part_1/: cachegrind.html  eventlog.html  eventlog.rst  heap_profiling_ext.html  heap_profiling_ghc.html  index.html  index.rst  measurement_ext.html  measurement_ghc.html  measurement_lib.html  the_recipe.html
src/Preface/: preface.html
src/Preliminaries/: book_for.html  book_for.rst  expectations.html  golden_rules.html  golden_rules.rst  how_to_debug.html  how_to_debug.rst  how_to_use.html  how_to_use.rst  index.html  index.rst  philosophies_of_optimization.html  philosophies_of_optimization.rst  repeatable_measurements.html  (+7 more)
(+260 files in other folders)
