cabal-version:      3.4
name:               lethargy
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             doyougnu
maintainer:         jeffrey.young@iohk.io
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable lethargy
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable lethargy-asm
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -ddump-asm


benchmark inlining
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -threaded
  build-depends: base >= 4.15
               , containers
               , deepseq
               , gauge
  hs-source-dirs: bench
  main-is: Inlining.hs

benchmark fusion
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -threaded
  build-depends: base >= 4.15
               , containers
               , deepseq
               , gauge
  hs-source-dirs: bench
  main-is: Fusion.hs

benchmark badDomain
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -threaded
  build-depends: base >= 4.15
               , containers
               , deepseq
               , gauge
  hs-source-dirs: bench
  main-is: BadDomain.hs

benchmark pointerChasing
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -fforce-recomp -threaded -rtsopts -prof -eventlog
  build-depends: base >= 4.15
               , containers
               , deepseq
               , gauge
               , random
  hs-source-dirs: bench/PointerChasing
  main-is: Main.hs

benchmark tooManyClosures
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -fforce-recomp -threaded -rtsopts -prof -eventlog -ticky -fprof-auto
  main-is         : Main.hs
  hs-source-dirs  : bench/TooManyClosures
  build-depends: base >= 4.15
               , containers
               , deepseq
               , gauge
               , random

benchmark weigh
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 -fforce-recomp
  main-is         : Main.hs
  hs-source-dirs  : bench/Weigh
  build-depends: base >= 4.15
               , containers
               , deepseq
               , weigh
               , gauge
               , text
               , random
