[tool.poetry]
name = "sphinx-exec-haskell"
version = "0.1.0"
description = ""
authors = ["doyougnu <jeffrey.young@iohk.io>"]
readme = "README.md"
packages = [{include = "sphinx_exec_haskell"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
